# buckler

./: .gitignore  .gitmodules  DelayedReaction.lf  HelloWorld.lf  README.md
.metadata/: version.ini
.metadata/.plugins/de.cau.cs.kieler.klighd.ui.view/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
buckler_revC/: Board.mk
script/: lf_nRF52832_support.c  lf_nRF52832_support.h  main.c  newscript.sh
script-bin/: lfc_build_nrf.sh
software/apps/lf_helloworld_test/: main.c  makeErrors.txt
software/apps/lf_helloworld_test/HelloWorld/: CMakeLists.txt  HelloWorld.c
software/apps/lf_helloworld_test/HelloWorld/core/: platform.h
software/apps/lf_helloworld_test/HelloWorld/core/platform/: lf_linux_support.c  lf_nRF52832_support.h  lf_unix_clock_support.c
software/apps/lf_helloworld_test/script/: script.sh
src/: ActionDelay.lf  Demo.lf  buckler_button_switches_test.lf  buckler_display_test.lf  buckler_test.lf
